test/files/neg/t12414b/a_1.scala

sealed trait Trait1
sealed trait Trait2

class Class1 extends Trait1
class Class2 extends Trait2
